--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,16 @@ build/Release
 node_modules/
 jspm_packages/
 
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
 
