--- a/compose.yaml
+++ b/compose.yaml
@@ -1,4 +1,4 @@
-version: '1'
+version: '3'
 services:
   server:
     container_name: demo_server
@@ -6,11 +6,12 @@ services:
       SERVER_PORT: 3000
       SERVER_HOSTNAME: demo_server
       SERVER_URL: http://demo_server:3000
+      API_GEOGRAPHIE: https://geo.api.gouv.fr
     build:
       context: ./server
       dockerfile: Dockerfile
     ports:
-      - 3000:3000
+      - "3000:3000"
     networks:
       - network
 
@@ -21,12 +22,12 @@ services:
     environment:
       VUE_APP_PORT: 8080
       VUE_APP_HOSTNAME: demo_client
-      SERVER_URL: http://demo_server:3000
+      SERVER_URL: http://localhost:3000 #browser hostname
     build:
       context: ./client
       dockerfile: Dockerfile
     ports:
-      - 8080:8080
+      - "8080:8080"
     networks:
       - network
 
