--- a/compose.yaml
+++ b/compose.yaml
@@ -1,11 +1,25 @@
 version: '3'
 services:
+
+  mongodb:
+    image: mongo
+    container_name: demo_mongo
+    #ports:
+      #- "27017:27017"
+    volumes:
+      - mongodb_data:/data/db
+    networks:
+      - network
+
   server:
     container_name: demo_server
+    depends_on:
+      - mongodb
     environment:
       SERVER_PORT: 3000
       SERVER_HOSTNAME: demo_server
       SERVER_URL: http://demo_server:3000
+      MONGO_URI: "mongodb://mongodb:27017/demo_epitech"
       API_GEOGRAPHIE: https://geo.api.gouv.fr
     build:
       context: ./server
@@ -43,3 +57,7 @@ services:
 
 networks:
   network:
+    driver: bridge
+
+volumes:
+  mongodb_data:
