--- a/server/package.json
+++ b/server/package.json
@@ -1,20 +1,20 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "prod": "node server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Maxime THEVENEAU",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongoose": "^7.5.2",
     "node-fetch": "^3.3.2",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2"
