--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,20 @@
   "author": "Maxime THEVENEAU",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "connect-mongodb-session": "^3.1.1",
+    "cookie-parser": "^1.4.6",
+    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.2",
     "node-fetch": "^3.3.2",
+    "passport": "^0.5.3",
+    "passport-google-oauth20": "^2.0.0",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2"
   }
