--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,7 @@
   "author": "Maxime THEVENEAU",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "connect-mongodb-session": "^3.1.1",
     "cookie-parser": "^1.4.6",
