--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
+    "moment-timezone": "^0.5.43",
     "mongoose": "^7.5.2",
     "node-fetch": "^3.3.2",
     "passport": "^0.5.3",
